# cc3d_build_scripts

build_utils_py3/: configs.py  git_version_fetch.py
conda-recipes/roadrunner_antimony/conda-recipe/: bld.bat  build.sh  instructions.rst  meta.yaml
conda_builder/: VersionsFiles.md  boacheck.sh  build_cc3d_suite.bat  build_cc3d_suite.sh  build_linux_installer.py  build_mac_installer.py  build_win_installer.py  cc3d_conda_input_data.json  cc3d_conda_input_data_linux.json  clion_settings_cmake  conda_package_builder.py  instructions.md  versions.yaml  versions.yaml_osx_x86_only
conda_builder/linux_installer/: find_conda.py  install.sh
conda_builder/linux_installer/bundled_installer/: build.sh  decompress  instructions.rst
conda_builder/linux_installer/bundled_installer/payload/: installer.sh
conda_builder/linux_installer/bundled_installer/payload/run_scripts/: compucell3d.sh  conda-shell.sh  paramScan.sh  runScript.sh  twedit++.sh
conda_builder/mac_installer/bundled_installer/: decompress
conda_builder/mac_installer/bundled_installer/payload/compucell3d.app/Contents/: Info.plist
conda_builder/mac_installer/bundled_installer/payload/run_scripts/: compucell3d.command  runScript.command
conda_builder/mac_installer/bundled_installer/payload/twedit++.app/Contents/: Info.plist
conda_builder/mac_installer_arm64/bundled_installer/: build.sh  instructions.rst
conda_builder/mac_installer_arm64/bundled_installer/payload/: installer.sh
conda_builder/mac_installer_arm64/bundled_installer/payload/compucell3d.app/Contents/: Info.plist
conda_builder/mac_installer_arm64/bundled_installer/payload/compucell3d.app/Contents/MacOS/: python
conda_builder/mac_installer_arm64/bundled_installer/payload/run_scripts/: compucell3d.command
conda_builder/mac_installer_arm64/bundled_installer/payload/twedit++.app/Contents/: Info.plist
conda_builder/mac_installer_x86_py_3.10/bundled_installer/: build.sh  decompress  instructions.rst
conda_builder/mac_installer_x86_py_3.10/bundled_installer/payload/: installer.sh
conda_builder/mac_installer_x86_py_3.10/bundled_installer/payload/compucell3d.app/Contents/MacOS/: python
conda_builder/mac_installer_x86_py_3.10/bundled_installer/payload/run_scripts/: twedit++.command
conda_builder/tmp/: installer_cmd.sh
conda_builder/win_nsis/: CompuCell3D_installer.nsi
conda_builder/win_old_prerequisites/: cc3d.bat  conda-shell.bat  paramScan.bat  runScript.bat  twedit++.bat
conda_builder/win_prerequisites/: cc3d.bat  compucell3d.bat  conda-shell.bat  paramScan.bat  runScript.bat  twedit++.bat
conda_builder/win_prerequisites/Prerequisites/: cc3d-install.bat  cc3d-uninstall.bat  log_and_display.py
cpp_examples/numpy_api_segfault_swig_fix/: CMakeLists.txt
cpp_examples/numpy_api_segfault_swig_fix/lib/: CMakeLists.txt  example.i  foo.cpp  foo.h
developer_zone/: configure_dev_zone.py  configure_dev_zone_win.py
linux/372/: build-debian-cc3d-372.sh
linux/400/: build.py
linux/400/aws/: aws_notes.rst
linux/nanohub/: README.md  run_cmake.sh  run_cmake_manual.sh  run_cmake_manual_conda.sh
linux/nanohub/run_scripts/: compucell3d.sh  runScript.sh  twedit++.sh
mac/build_scripts_py3/: build_script.py  build_script_dmg.py  build_script_dmg_10.14.py  config_64bit_2021_10.14.json
mac/build_scripts_py3/rpath_handlers/: python_recursive_sign.py
mac/conda_build_auto/: conda_build_auto.py
mac/conda_installer/: conda_init.sh  conda_init_cc3d.sh
mac/conda_installer/bundled_installer/: build.sh  decompress  instructions.rst
mac/conda_installer/bundled_installer/payload/: installer  installer.sh
mac/conda_installer/bundled_installer/payload/compucell3d.app/Contents/MacOS/: python
mac/conda_installer/bundled_installer/payload/run_scripts/: paramScan.command  twedit++.command
mac/conda_installer/bundled_installer/payload/twedit++.app/Contents/MacOS/: python
mac/run_scripts_conda_distro/: compucell3d.command
mac/vtk_qt5/: demo.py  email.txt  libosxhelper.dylib
mac/vtk_qt5/cpp/: CMakeLists.txt  main.cpp
mac/vtk_qt5/cpp_build/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  libosxhelper.dylib  qtimageviewer
mac/vtk_qt5/ctypes_demo/: README
mac/vtk_qt5/ctypes_demo/examples/: viactypes.py  viamodule.py
mac/vtk_qt5_osxhelper/: CMakeLists.txt
mac/vtk_qt5_osxhelper_build_1/: CMakeCache.txt  Makefile  cmake_install.cmake  libosxhelper.dylib
windows/4.0.0/: hubflow_workflow.rst  instructions.rst
windows/4.0.0/miniconda_based/: installer.bat  installer_commands.cmd
windows/build_scripts_py3/: CompuCell3D-64bit.nsi.tpl  build_all.bat  config_32bit.json  config_64bit.json  config_64bit_python_36.json  hubflow_workflow_on_windows.rst  win_cc3d_builder.py
